# sunny-pint

./: .gitignore  .npmrc  CLAUDE.md  LICENSE  README.md  biome.json  index.html  justfile  lighthouserc.json  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml  tsconfig.json  vite.config.ts
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
app/: buildings.py  lidar.py  main.py  shadow.py  shadows.py
data/: buildings.tif  county_map.json  lastmod_state.json  ons_counties.geojson  ons_countries.geojson  ons_to_county.json  pubs.json  slug_lock.json
docs/: ARCHITECTURE.md  DATA_PIPELINE.md  INFRA_AUDIT.md  PROJECT_PLAN.md
email-worker/: package-lock.json  package.json  wrangler.toml
pipeline/: DESIGN.md  data_robots.txt  deploy_data.py  manifest.py  pyproject.toml  report.py  run.py
pipeline/stages/: build_inspire.py  enrich.py  extract.py  horizon.py  index.py  package.py  score.py  tiles.py
pipeline/ts/: precompute_sun.ts  precompute_sun_worker.ts
pipeline/ts/lib/: tiles_node.ts
pipeline/utils/: bundles.py  download.py  grid.py  lidar.py  localities.py  places.py  progress.py  terrain50.py
public/: _headers  attribution.html  docs.css  docs.js  how-it-works.html  privacy.html  robots.txt  sitemap.txt
ref/: r2-cors-policy.json
scripts/: areas.py  build_county_map.py  build_gpkg.py  build_inspire_gpkg.py  compute_horizons.py  deploy_data.py  download_inspire.py  download_inspire_scotland.py  download_lidar.py  fetch_buildings.py  fetch_pubs.py  generate_pages.ts  generate_pmtiles.py  generate_tiles.py  (+11 more)
(+111 files in other folders)
