[project]
name = "sunpub"
version = "0.1.0"
description = "Find sunny seats in beer gardens"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "rasterio>=1.4",
    "numpy>=2.0",
    "pyproj>=3.6",
    "Pillow>=11.0",
    "fiona>=1.10.1",
    "shapely>=2.1.2",
    "osmium>=4.3.1",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
]
