[project]
name = "sunny-pint-pipeline"
version = "2.0.0"
description = "Sunny Pint data pipeline — LiDAR heights, terrain horizons, parcel matching, tile generation"
requires-python = ">=3.11"
dependencies = [
    "rasterio>=1.4",
    "numpy>=2.0",
    "pyproj>=3.6",
    "fiona>=1.10.1",
    "shapely>=2.1.2",
    "osmium>=4.3.1",
    "boto3>=1.42.88",
    "scipy>=1.17.1",
]

[tool.uv]
package = false

[tool.uv.sources]
